--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "coolsms-proxy",
   "version": "1.0.0",
+  "description": "중간 서버 역할을 하는 CoolSMS 중계용 Node.js 애플리케이션",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
-  }
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "license": "MIT"
 }
